--- a/src/pages/banyumas/Banyumas.module.scss
+++ b/src/pages/banyumas/Banyumas.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   min-height: 100vh;
   padding: 2rem;
+  background-color: #f9f9f9;
   .main {
     text-align: justify;
     width: 100%;
