--- a/src/pages/article/DetailArticle.module.scss
+++ b/src/pages/article/DetailArticle.module.scss
@@ -35,7 +35,8 @@
     .meta {
       font-size: 18px;
       color: #666;
-      margin-top: 0.5rem;
+      margin-top: 30px;
+      margin-bottom: 15px;
 
       @media (max-width: 768px) {
         font-size: 14px;
@@ -74,7 +75,6 @@
         }
       }
     }
-
     .content {
       font-size: 20px;
       line-height: 1.6;
