--- a/src/pages/destination/Detail.module.scss
+++ b/src/pages/destination/Detail.module.scss
@@ -89,9 +89,7 @@
       flex-direction: row;
       gap: 1rem;
       overflow-x: auto;
-      /* Aktifkan scroll horizontal */
       scroll-snap-type: x mandatory;
-      /* Efek snap scrolling */
       padding-bottom: 1rem;
     }
     .imageWrapper {
@@ -99,6 +97,7 @@
       height: 300px;
       overflow: hidden;
       border-radius: 8px;
+      scroll-snap-align: center; /* Menambahkan efek snapping */
       @media (max-width: 768px) {
         width: 250px;
         height: 200px;
@@ -110,6 +109,8 @@
     }
     .img {
       object-fit: cover;
+      width: 100%;
+      height: 100%;
     }
   }
   .details {
