--- a/src/pages/destination/Detail.module.scss
+++ b/src/pages/destination/Detail.module.scss
@@ -79,25 +79,25 @@
   }
   .imageGallery {
     display: flex;
+    flex-direction: row;
     gap: 1rem;
     margin-bottom: 2rem;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    scroll-snap-type: x mandatory;
     @media (max-width: 768px) {
       gap: 0.5rem;
     }
     @media (max-width: 480px) {
-      display: flex;
-      flex-direction: row;
-      gap: 1rem;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
       padding-bottom: 1rem;
     }
     .imageWrapper {
+      flex: 0 0 auto;
       width: 350px;
       height: 300px;
       overflow: hidden;
       border-radius: 8px;
-      scroll-snap-align: center; /* Menambahkan efek snapping */
+      scroll-snap-align: center;
       @media (max-width: 768px) {
         width: 250px;
         height: 200px;
@@ -108,9 +108,9 @@
       }
     }
     .img {
-      object-fit: cover;
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
   .details {
